--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,4 @@
 /* css styles */
-/* @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Pacifico&display=swap');
-h1.title {
-  font-family: "Pacifico";
-  font-size: 50px;
+.column-body{
+  text-align: justify;
 }
-*/
